--- a/templates/home.html
+++ b/templates/home.html
@@ -105,10 +105,7 @@
     </form>
  </div>
 
- <div class="container button1">
-  <a href="webcamface" type="button" class="btn btn-outline-info btn-lg mx-3" style="width: 290px;">Start Webcam</a>
-   
- </div>   
+    
   
   </div>
 
@@ -118,7 +115,7 @@
 
     <img src="/static/object.jpg" class="rounded mx-3" align="right" alt="Face Detection" width=650 height="423" HSPACE=60 VSPACE=40>
 
-    <p class="para">Object detection is probably the most profound aspect of computer vision due the number practical use cases. Object detection has been widely used for face detection, vehicle detection, security systems and driverless cars. Here I have created a project to detect objects using OpenCV and python. This Object Detection OpenCV method will be able to detect objects with good accuracy. For object detection from Webcam and Video I have used Mobile Net SSD object detector and for image used yolov3 object detector. Mobile Net SSD is faster than the yolov3 but gives less accuracy than yolov3. </p>
+    <p class="para">Object detection is probably the most profound aspect of computer vision due the number practical use cases. Object detection has been widely used for face detection, vehicle detection, security systems and driverless cars. Here I have created a project to detect objects using OpenCV and python. This Object Detection OpenCV method will be able to detect objects with good accuracy. For object detection, in my project I have used Mobile Net SSD object detector. As compare to yolov3 object detector mobile Net SSD is faster than the yolov3 but gives less accuracy than yolov3. </p>
 </div>
 
 
@@ -146,10 +143,7 @@
         </div>   
     </form>
  </div>
- <div class="container button1">
-  <a href="webcamobject" type="button" class="btn btn-outline-info btn-lg mx-3" style="width: 290px;">Start Webcam</a>
-   
- </div>   
+    
   
   </div>
 
