--- a/templates/home.html
+++ b/templates/home.html
@@ -166,13 +166,12 @@
         
     <a href="https://flask.palletsprojects.com/en/2.0.x/" style="color:#7F7F7FFF;" class="link1">Flask</a>
    
-    <a href="https://dev.mysql.com/doc/" style="color:#EB138EFF;" class="link1">MySQL</a>
+    <a href="http://cassandra.apache.org/doc/latest/" style="color:#EB138EFF;" class="link1">Cassandra</a>
 
     <a href="https://devdocs.io/html/" style="color:#F0CD2FFF;" class="link1">HTML</a>
 
     <a href="https://getbootstrap.com/docs/4.1/getting-started/introduction/" style="color:#6D629CFF;" class="link1">Bootstrap</a>
 
-    <a href="https://learn.getgrav.org/16/advanced/yaml" style="color:#72372FFF;" class="link1">Yaml</a>
   </center>
     
 </div>
