--- a/templates/home.html
+++ b/templates/home.html
@@ -39,9 +39,9 @@
   text-decoration: none;
   font-size: 17px;
   font-weight: bold;
-  margin-right: 140px;
+  margin-right: 70px;
   margin-left: 17px;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 
@@ -242,22 +242,39 @@
   <center>
     <img src="/static/linkedin.png" alt="LinkedIn Logo" width=30 height="30">
     <a href="https://www.linkedin.com/in/anaranje/" style="color:#0D77B4FF;" class="link1 ">LinkedIn</a>
-    
+    </center>
+</div>
+
+<div class="container my-5">
+  <center>    
     <img src="/static/github.png"  alt="Github Logo" width=30 height="30">
     <a href="https://github.com/adityanaranje" style="color:#000000;" class="link1">Github</a>
-    
+</center>
+</div>
+
+<div class="container my-5">
+  <center>    
     <img src="/static/kaggle.png"  alt="Kaggle Logo" width=30 height="30">
     <a href="https://www.kaggle.com/adityanaranje" style="color:#38C6F5FF;" class="link1">Kaggle</a>
 </center>
 </div>
+
 <div>
   <center>
     <img src="/static/instagram.png"  alt="Instagram Logo" width=30 height="30">
     <a href="https://www.instagram.com/delta_venom77" style="color:#DC22A0FF;" class="link1">Instagram</a>
-
+ </center>
+</div>   
+    
+<div class="container my-5">
+  <center>
     <img src="/static/mail.png" alt="Mail Logo" width=30 height="30">
     <a href="mailto:aditya.naranje7@gmail.com" style="color:#F0372FFF;" class="link1">E-mail</a>
-
+</center>
+</div> 
+    
+<div class="container my-5">
+  <center>
     <img src="/static/fb.png" alt="FB Logo" width=35 height="35">
     <a href="https://www.facebook.com/mahindra.dhoni.710" style="color:#3661C8FF;" class="link1">Facebook</a>
   </center>
